# FeSimSim

./: compile_linux.sh  configure.ac
src/: Makefile.am  conf.c
src/frontend/: inpcom.c  misccoms.c  signal_handler.c  subckt.c
src/frontend/trannoise/: 1-f-code.c
src/maths/ni/: niinteg.c
src/spicelib/analysis/: cktdojob.c
src/spicelib/devices/: Makefile.am  dev.c
src/spicelib/devices/bsim4/: b4noi.c
src/spicelib/devices/fecap1/: Makefile-backup.am  Makefile.am  fecap1.c  fecap1acld.c  fecap1ask.c  fecap1conv.c  fecap1defs.h  fecap1ext.h  fecap1fbr.c  fecap1getic.c  fecap1init.c  fecap1init.h  fecap1itf.h  fecap1load.c  fecap1mask.c  fecap1mpar.c  fecap1param.c  fecap1setup.c  fecap1temp.c  fecap1trunc.c
src/spicelib/devices/fefet1/: Makefile.am  fefet1.c  fefet1acld.c  fefet1ask.c  fefet1check.c  fefet1cvtest.c  fefet1def.h  fefet1ext.h  fefet1geo.c  fefet1getic.c  fefet1init.c  fefet1init.h  fefet1itf.h  fefet1ld.c  fefet1mask.c  fefet1mdel.c  fefet1mpar.c  fefet1noi.c  fefet1par.c  fefet1pzld.c  fefet1set.c  fefet1soachk.c  fefet1temp.c  fefet1trunc.c
src/spicelib/devices/isrc/: isrcacct.c  isrctemp.c
src/spicelib/devices/memc1/: Makefile.am  memc1.c  memc1ask.c  memc1conv.c  memc1defs.h  memc1ext.h  memc1fbr.c  memc1getic.c  memc1init.c  memc1init.h  memc1itf.h  memc1load.c  memc1mask.c  memc1mpar.c  memc1param.c  memc1setup.c  memc1temp.c  memc1trunc.c
src/spicelib/devices/memi1/: Makefile.am  memi1.c  memi1ask.c  memi1conv.c  memi1defs.h  memi1ext.h  memi1fbr.c  memi1getic.c  memi1init.c  memi1init.h  memi1itf.h  memi1load.c  memi1mask.c  memi1mpar.c  memi1param.c  memi1setup.c  memi1temp.c  memi1trunc.c
src/spicelib/devices/memr1/: Makefile.am  memr1.c  memr1acld.c  memr1ask.c  memr1conv.c  memr1defs.h  memr1ext.h  memr1fbr.c  memr1getic.c  memr1init.c  memr1init.h  memr1itf.h  memr1load.c  memr1mask.c  memr1mpar.c  memr1noi.c  memr1param.c  memr1setup.c  memr1temp.c  memr1trunc.c
src/spicelib/devices/memr2/: Makefile.am  memr2.c  memr2acct.c  memr2acld.c  memr2ask.c  memr2conv.c  memr2defs.h  memr2ext.h  memr2fbr.c  memr2getic.c  memr2init.c  memr2init.h  memr2itf.h  memr2load - 副本.c  memr2load.c  memr2mask.c  memr2mpar.c  memr2noi.c  memr2param.c  memr2setup.c  memr2temp.c  memr2trunc.c
src/spicelib/devices/memr3/: Makefile.am  memr3.c  memr3ask.c  memr3conv.c  memr3defs.h  memr3ext.h  memr3fbr.c  memr3getic.c  memr3init.c  memr3init.h  memr3itf.h  memr3load.c  memr3mask.c  memr3mdel.c  memr3mpar.c  memr3param.c  memr3setup.c  memr3temp.c  memr3trunc.c
src/spicelib/parser/: inp2c.c  inp2n.c  inpdomod.c  inppas2.c
visualc/: sharedspice.vcxproj  vngspice-fftw.vcxproj  vngspice.vcxproj
visualc/ng_shared_xspice_v/ng_shared_test_v/: ng_shared_test_v.vcxproj
visualc/xspice/: analog.vcxproj  digital.vcxproj  spice2poly.vcxproj  table.vcxproj  xtradev.vcxproj  xtraevt.vcxproj
visualc/xspice/cmpp/: cmpp.vcxproj
