## Process this file with automake to produce Makefile.in

noinst_LTLIBRARIES = libfefet1.la

libfefet1_la_SOURCES =	\
	fefet1.c		\
	fefet1acld.c	\
	fefet1ask.c	\
	fefet1check.c	\
	fefet1cvtest.c	\
	fefet1geo.c	\
	fefet1getic.c	\
	fefet1ld.c	\
	fefet1mask.c	\
	fefet1mdel.c	\
	fefet1mpar.c	\
	fefet1noi.c	\
	fefet1par.c	\
	fefet1pzld.c	\
	fefet1set.c	\
	fefet1soachk.c	\
	fefet1temp.c	\
	fefet1trunc.c	\
	fefet1def.h	\
	fefet1ext.h	\
	fefet1init.c	\
	fefet1init.h	\
	fefet1itf.h



AM_CPPFLAGS = @AM_CPPFLAGS@ -I$(top_srcdir)/src/include
AM_CFLAGS = $(STATIC)

MAINTAINERCLEANFILES = Makefile.in


